# vatsim-airport-rates

./: .gitignore  Cargo.toml  app.js  arrival_spacing.py  boundingBoxes.json  example.json  graph.py  historic_rates.py  index.html  rates.csv  rates.py  readme.md  requirements.txt  server.py
.github/workflows/: deploy.yml
_data/: arrival_spacing.py  boundingBoxes.json  graph.py  weekly-rates.py
src/: airport.rs  api.rs  lib.rs  maths.rs  models.rs  state.rs
static/: styles.css
