[package]
name = "wasm-test"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window", "Document", "HtmlElement", "HtmlButtonElement", "console"] }
console_error_panic_hook = "0.1"

[profiles.release]
lto = true
codegen-units = 1
opt-level = 's'

[dev-dependencies]
wasm-bindgen-test = "0.3.64"

[lib]
crate-type = ["cdylib", "rlib"]