[package]
name = "vatsim-replay-map"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Window", "Document", "HtmlElement", "HtmlButtonElement", "console", "Request", "RequestInit", "RequestMode", "Response"] }
console_error_panic_hook = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
js-sys = "0.3"
geojson = "0.24"
geo = "0.27"

[profile.release]
lto = true
codegen-units = 1
opt-level = 's'

[dev-dependencies]
wasm-bindgen-test = "0.3.64"

[lib]
crate-type = ["cdylib", "rlib"]